--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,18 @@
+body {
+  margin: 0px;
+  padding: 20px;
+  height: 100dvh;
+  box-sizing: border-box;
+}
+
+#root {
+  height: 100%;
+}
+
 .game-container {
   margin: auto;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -16,13 +27,6 @@
   height: 30px;
 }
 
-.button-container button {
-}
-
 .bold {
   font-weight: bold;
-}
-
-:root {
-  padding: 20px;
 }
