--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,32 @@
+.bold {
+  font-weight: bold;
+}
+
+.game-over-label {
+  position: relative;
+  top: 300px;
+
+}
+
+.game-container {
+  margin: auto;
+  width: 100%;
+  height: calc(100dvh - 40px);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.button-container {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 10px;
+  height: 30px;
+}
+
+
 :root {
     font-family: system-ui, sans-serif; 
 }
@@ -51,4 +80,13 @@ body {
 .config-scroll-box {
     padding-top: 10px;
     overflow: scroll;
+}
+
+.game-container {
+  margin: auto;
+  width: 100%;
+  height: calc(100dvh - 40px);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
