--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,9 @@
+body,
+html {
+    margin: 0 !important;
+    padding: 0 !important;
+}
+
 .bold {
     font-weight: bold;
 }
@@ -77,7 +83,7 @@ body {
 
 .config-scroll-box {
     padding-top: 10px;
-    overflow: scroll;
+    overflow: auto;
 }
 
 .game-container {
